Implemented plenty of suggestions Plenty of fixes Removed tracking of date being changed Removed new events in comments
