# src/ars/core/models.py
@@ -116,14 +116,6 @@ class AccessRequest(AccessRequestCreationData):
     status_changed: UTCDatetime | None = Field(
         default=None, description="Last change date of the status of this request"
     )
-    access_starts_changed: UTCDatetime | None = Field(
-        default=None,
-        description="Last change date of the access start date of this request",
-    )
-    access_ends_changed: UTCDatetime | None = Field(
-        default=None,
-        description="Last change date of the access end date of this request",
-    )
     changed_by: str | None = Field(
         default=None,
         description="The ID of the data steward who made the status change",
@@ -138,14 +130,14 @@ class AccessRequestPatchData(BaseDto):
         description="ID of the IVA to be used for this request",
     )
     status: AccessRequestStatus | None = Field(
-        default=...,
+        default=None,
         description="The new status of this access request",
     )
 
     access_starts: UTCDatetime | None = Field(
-        default=..., description="Requested start date of access"
+        default=None, description="Requested start date of access"
     )
 
     access_ends: UTCDatetime | None = Field(
-        default=..., description="Requested end date of access"
+        default=None, description="Requested end date of access"
     )
